# ansible-ai-agents

./: .gitignore  AGENTS.md  README.md  ansible.cfg  playbook.yml  pyproject.toml  requirements.yml
.github/workflows/: cicd.yml  molecule.yml
defaults/: main.yml
docs/: cli-toolchain.md  configuration.md  mcp-servers.md  variables.md
meta/: argument_specs.yml  main.yml
molecule/default/: converge.yml  molecule.yml  prepare.yml  verify.yml
molecule/default/tasks/: verify_agents.yml
molecule/localhost/: verify.yml
molecule/steamdeck/: converge.yml  prepare.yml  verify.yml
tasks/: main.yml
tasks/config/: agy_hooks.yml  claude_settings.yml  clone.yml  git_identity.yml  github_app.yml  mcp.yml  mcp_servers.yml  symlinks.yml
tasks/install/: _install_script.yml  agy.yml  aider.yml  claude_code.yml  cli_tool.yml  cli_tools.yml  codex.yml  copilot.yml  cursor.yml  npm_tools.yml  playwright.yml  repo_sync.yml
templates/: github-app.env.j2  mcp-github-app.sh.j2  mcp-playwright.sh.j2  mcp_config.json.j2
